created skills-projects-contact with theme and animation

--- a/src/index.css
+++ b/src/index.css
@@ -15,11 +15,9 @@
   --color-brownstone: #592500;
   --color-royalpurple: #490059; */
 
-  --color-olive: #606C38;
-  --color-burntorange: #BC6C25;
-  --color-cream: #FEFAE0;
-  --color-mossgreen: #283618;
-  --color-goldenrod: #DDA15E;
+  --color-midnight: #0f0e17; 
+  --color-lavender: #a786df;  
+  --color-sunset: #ff8906;
 
 
 }
